CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_AMT__c.object
<CustomObject>
    <description>County Rate Amount</description>
    <fields>
        <fullName>CDE_AGE_GROUP__c</fullName>
        <description>Age Group</description>
        <label>Age Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00710</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_PROVR_TYPE__c</fullName>
        <label>Provider Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_FAC_TYPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_RATE_TEMPLT__c</fullName>
        <description>County Rate Template</description>
        <label>County Rate Template</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_COUNTY_RATE_PLAN_TEMPLT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_RATE_TYPE__c</fullName>
        <description>Rate Type</description>
        <label>Rate Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00751</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TIER__c</fullName>
        <description>Tier</description>
        <label>Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_PROVR_TIER</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_UNIT__c</fullName>
        <description>Care Unit</description>
        <label>Care Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00715</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_COUNTY_RATE__c</fullName>
        <description>County Rate Plan</description>
        <label>County Rate Plan</label>
        <referenceTo>T_COUNTY_RATE__c</referenceTo>
        <relationshipLabel>County Rate</relationshipLabel>
        <relationshipName>County_Rate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IND_RATE_TEMPLT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>County Rate Template Indicator</description>
        <label>County Rate Template Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NBR_AMOUNT__c</fullName>
        <description>Amount</description>
        <label>Amount</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>County Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDE_AGE_GROUP__c</columns>
        <columns>NBR_AMOUNT__c</columns>
        <columns>CDE_UNIT__c</columns>
        <columns>IDN_COUNTY_RATE__c</columns>
        <columns>CDE_PROVR_TYPE__c</columns>
        <columns>CDE_RATE_TYPE__c</columns>
        <columns>CDE_TIER__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDN_COUNTY_RATE__c</field>
            <operation>equals</operation>
            <value>CR-0000000608</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_cannot_be_greater_than_500</fullName>
        <active>true</active>
        <description>Amount cannot be greater than 500</description>
        <errorConditionFormula>NBR_AMOUNT__c &gt;500 &amp;&amp;  TEXT(CDE_UNIT__c) = &apos;3&apos;</errorConditionFormula>
        <errorDisplayField>NBR_AMOUNT__c</errorDisplayField>
        <errorMessage>Amount cannot be greater than 500</errorMessage>
    </validationRules>
</CustomObject>