CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_AMT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_AGE_GROUP__c</columns>
    <columns>NBR_AMOUNT__c</columns>
    <columns>CDE_UNIT__c</columns>
    <columns>IDN_COUNTY_RATE__c</columns>
    <columns>CDE_PROVR_TYPE__c</columns>
    <columns>CDE_RATE_TYPE__c</columns>
    <columns>CDE_TIER__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDN_COUNTY_RATE__c</field>
        <operation>equals</operation>
        <value>CR-0000000608</value>
    </filters>
    <label>All</label>
</ListView>