CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_AMT__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY_RATE__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CDE_PROVR_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>